--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 nomic[local]>=2.0.0
 pillow>=9.0.0
-argparse>=1.4.0
+typer>=0.9.0
 tqdm>=4.62.0
 torch>=1.9.0
-typer>=0.9.0
-typing-extensions>=4.5.0
-watchdog>=2.2.0
-pathlib>=1.0.1
-uuid>=1.30
+numpy>=1.20.0
